@startuml

title __POJO's Class Diagram__\n

  namespace com.example.project {
    namespace pojo {
      class com.example.project.pojo.Collect {
          - date : String
          - id : int
          + Collect()
          + Collect()
          + getCuster()
          + getDate()
          + getId()
          + getText()
          + setCuster()
          + setDate()
          + setId()
          + setText()
          + toString()
      }
    }
  }
  

  namespace com.example.project {
    namespace pojo {
      class com.example.project.pojo.Custer {
          - birth : String
          - face : String
          - id : int
          - imagebytes : String
          - name : String
          - nums : Long
          - password : String
          - phone : String
          - sex : String
          - username : String
          - vir_name : String
          + Custer()
          + Custer()
          + Custer()
          + getBirth()
          + getFace()
          + getId()
          + getImagebytes()
          + getName()
          + getNums()
          + getPassword()
          + getPhone()
          + getSex()
          + getUsername()
          + getVir_name()
          + setBirth()
          + setFace()
          + setId()
          + setImagebytes()
          + setName()
          + setNums()
          + setPassword()
          + setPhone()
          + setSex()
          + setUsername()
          + setVir_name()
          + toString()
      }
    }
  }
  

  namespace com.example.project {
    namespace pojo {
      class com.example.project.pojo.Kind {
          - content : String
          - kid : int
          + Kind()
          + Kind()
          + Kind()
          + getContent()
          + getKid()
          + setContent()
          + setKid()
          + toString()
      }
    }
  }
  

  namespace com.example.project {
    namespace pojo {
      class com.example.project.pojo.Like {
          - date : String
          - id : int
          + Like()
          + Like()
          + Like()
          + getCuster()
          + getDate()
          + getId()
          + getText()
          + setCuster()
          + setDate()
          + setId()
          + setText()
          + toString()
      }
    }
  }
  

  namespace com.example.project {
    namespace pojo {
      class com.example.project.pojo.Text {
          - article : String
          - c_date : String
          - cnums : int
          - knums : int
          - theme : String
          - tid : int
          + Text()
          + Text()
          + Text()
          + getArticle()
          + getC_date()
          + getCnums()
          + getCuster()
          + getKind()
          + getKnums()
          + getTheme()
          + getTid()
          + setArticle()
          + setC_date()
          + setCnums()
          + setCuster()
          + setKind()
          + setKnums()
          + setTheme()
          + setTid()
          + toString()
      }
    }
  }
  

  com.example.project.pojo.Collect .up.|> java.io.Serializable
  com.example.project.pojo.Collect o-- com.example.project.pojo.Custer : custer
  com.example.project.pojo.Collect o-- com.example.project.pojo.Text : text
  com.example.project.pojo.Custer .up.|> java.io.Serializable
  com.example.project.pojo.Kind .up.|> java.io.Serializable
  com.example.project.pojo.Like .up.|> java.io.Serializable
  com.example.project.pojo.Like o-- com.example.project.pojo.Custer : custer
  com.example.project.pojo.Like o-- com.example.project.pojo.Text : text
  com.example.project.pojo.Text .up.|> java.io.Serializable
  com.example.project.pojo.Text o-- com.example.project.pojo.Custer : custer
  com.example.project.pojo.Text o-- com.example.project.pojo.Kind : kind


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
